--- a/src/app/modules/reschedule-cases/make-reschedule/new-gl-code/new-gl-code.component.html
+++ b/src/app/modules/reschedule-cases/make-reschedule/new-gl-code/new-gl-code.component.html
@@ -50,7 +50,7 @@
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                 <mat-label class="customMatLabel">GL <strong class="matMandatory">*</strong></mat-label>
                                 <input matInput placeholder="Enter Gl" formControlName="GLCode" maxlength="13"
-                                       autocomplete="off"/>
+                                       autocomplete="off" appNumberOnly/>
                             </mat-form-field>
 
                         </div>
@@ -58,14 +58,14 @@
                             <mat-form-field class="mat-form-field-fluid  w-full" appearance="outline">
                                 <mat-label class="customMatLabel">Scheme Code</mat-label>
                                 <input matInput placeholder="Enter Scheme Code" formControlName="SchemeCode"
-                                       maxlength="13" autocomplete="off"/>
+                                       maxlength="13" autocomplete="off" appNumberOnly/>
                             </mat-form-field>
                         </div>
                         <div class="col-lg-4 col-sm-12">
                             <mat-form-field class="mat-form-field-fluid  w-full" appearance="outline">
                                 <mat-label class="customMatLabel">Crop Code</mat-label>
                                 <input matInput placeholder="Enter Crop Code" formControlName="CropCode" maxlength="13"
-                                       autocomplete="off"/>
+                                       autocomplete="off" appNumberOnly/>
                             </mat-form-field>
 
                         </div>
