--- a/src/app/modules/reschedule-cases/refer-back-reschedule-cases/refer-back-reschedule-cases.component.html
+++ b/src/app/modules/reschedule-cases/refer-back-reschedule-cases/refer-back-reschedule-cases.component.html
@@ -53,7 +53,7 @@
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                 <mat-label class="customMatLabel">Loan Case#</mat-label>
                                 <input matInput placeholder="Enter Loan Case No" formControlName="Lcno" maxlength="10"
-                                       autocomplete="off"/>
+                                       autocomplete="off" appNumberOnly/>
                             </mat-form-field>
                         </div>
                     </div>
