--- a/src/app/modules/land-creation/cust-land-list/cust-land-list.component.html
+++ b/src/app/modules/land-creation/cust-land-list/cust-land-list.component.html
@@ -82,7 +82,7 @@
                         <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0">
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                 <mat-label>Passbook NO</mat-label>
-                                <input matInput formControlName="PassbookNO" placeholder="Enter Passbook Number"
+                                <input appNumberOnly matInput formControlName="PassbookNO" placeholder="Enter Passbook Number"
                                        maxlength="100"
                                        autocomplete="off">
                                 <!--  <mat-error *ngIf="hasError('landName', 'required')">landName <strong>required</strong></mat-error>-->
