--- a/src/app/modules/loan/search-dbr/search-dbr.component.html
+++ b/src/app/modules/loan/search-dbr/search-dbr.component.html
@@ -72,7 +72,7 @@
                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                         <mat-form-field class="mat-form-field-fluid  w-full" appearance="outline">
                             <mat-label>Loan Case#</mat-label>
-                            <input matInput placeholder="Enter Loan Case Number" formControlName="LcNo">
+                            <input appNumberOnly matInput placeholder="Enter Loan Case Number" formControlName="LcNo">
                         </mat-form-field>
 
                     </div>
