--- a/src/app/modules/loan/cl-appraisal-of-proposed-investment/cl-appraisal-of-proposed-investment.component.html
+++ b/src/app/modules/loan/cl-appraisal-of-proposed-investment/cl-appraisal-of-proposed-investment.component.html
@@ -192,20 +192,20 @@
                     <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                             <mat-label class="customMatLabel">Total Output(md)</mat-label>
-                            <input matInput placeholder="Enter Output" formControlName="Output" maxlength="50"/>
+                            <input appNumberOnly matInput placeholder="Enter Output" formControlName="Output" maxlength="50"/>
                         </mat-form-field>
                     </div>
                     <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                             <mat-label class="customMatLabel">Price(Rs./Md)</mat-label>
-                            <input matInput placeholder="Enter Price" formControlName="Price" maxlength="50"/>
+                            <input appNumberOnly matInput placeholder="Enter Price" formControlName="Price" maxlength="50"/>
                         </mat-form-field>
                     </div>
                     <div class="col-lg-4 col-sm-12 kt-margin-bottom-20-mobile">
                         <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                             <mat-label class="customMatLabel">Expenditure %</mat-label>
-                            <input matInput placeholder="Enter Expenditure" formControlName="Expenditure"
-                                   maxlength="50"/>
+                            <input appNumberOnly matInput placeholder="Enter Expenditure" formControlName="Expenditure"
+                                   maxlength="3"/>
                         </mat-form-field>
                     </div>
                     <div class="col-lg-4 kt-margin-bottom-20-mobile mb-2">
