--- a/src/app/modules/loan/cl-view-loan/cl-view-loan.component.html
+++ b/src/app/modules/loan/cl-view-loan/cl-view-loan.component.html
@@ -37,7 +37,7 @@
                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                         <mat-form-field class="mat-form-field-fluid  w-full" appearance="outline">
                             <mat-label>LA File/Booklet#</mat-label>
-                            <input matInput placeholder="Enter >LA File/Booklet" formControlName="AppNo">
+                            <input appNumberOnly matInput placeholder="Enter >LA File/Booklet" formControlName="AppNo">
                         </mat-form-field>
                     </div>
                 </div>
@@ -64,7 +64,7 @@
                     <div class="flex flex-shrink-0 items-center mt-6 sm:mt-0" style="width: 225px;">
                         <mat-form-field class="mat-form-field-fluid  w-full" appearance="outline">
                             <mat-label>Loan Case#</mat-label>
-                            <input matInput placeholder="Enter Loan Case Number" formControlName="LcNo">
+                            <input appNumberOnly matInput placeholder="Enter Loan Case Number" formControlName="LcNo">
                         </mat-form-field>
 
                     </div>
