--- a/src/app/modules/customer/customer-history/customer-history.component.html
+++ b/src/app/modules/customer/customer-history/customer-history.component.html
@@ -8,7 +8,7 @@
         </div>
 
     </div>
-    <div class="flex flex-auto border shadow-xs rounded-sm bg-gray-50 overflow-y-scroll"
+    <div class="flex flex-auto border shadow-xs rounded-sm bg-gray-50 overflow-x-hidden overflow-y-scroll"
          style="flex-direction: column;">
 
         <div class="row">
