--- a/src/app/modules/customer/customer-profile/customer-profile.component.html
+++ b/src/app/modules/customer/customer-profile/customer-profile.component.html
@@ -599,8 +599,8 @@
                                         <mat-error *ngIf="hasError('CurrentAddress', 'required')">Current Address
                                             <strong>required</strong>
                                         </mat-error>
-                                        <mat-hint align="left">Please enter Current Address
-                                        </mat-hint>
+                                        <!-- <mat-hint align="left">Please enter Current Address
+                                        </mat-hint> -->
                                     </mat-form-field>
                                 </div>
                             </div>
