--- a/src/app/modules/customer/customer-profile/customer-profile.component.html
+++ b/src/app/modules/customer/customer-profile/customer-profile.component.html
@@ -678,7 +678,7 @@
 
     <div class="kt-portlet__foot kt-portlet__foot--fit mt-2 kt-portlet__no-border">
 
-        <div class="table table-striped table-bordered" style="height: 500px">
+        <div class="table table-striped table-bordered">
             <thead>
             <tr class="table-header-background">
                 <td>Document Type</td>
