--- a/src/app/modules/dashboard/provincial-chief/provincial-chief.component.html
+++ b/src/app/modules/dashboard/provincial-chief/provincial-chief.component.html
@@ -1,6 +1,6 @@
 <div
     class=" pt-3 sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-hidden bg-card dark:bg-transparent">
-    <div class="heading">Regional Cheif</div>
+    <div class="heading">Provincial Cheif</div>
     <!-- Header -->
 
     <!-- Main -->
