--- a/src/app/modules/dashboard/recovery-officer-dashboard/recovery-officer-dashboard.component.html
+++ b/src/app/modules/dashboard/recovery-officer-dashboard/recovery-officer-dashboard.component.html
@@ -25,20 +25,23 @@
 
 
                 </div>
-                <!-- <div class="col-lg-6 py-3">
-                    <div class="shadow-sm border">
-                        <div id="chart" class=" m-0 pt-2">
-                            <apx-chart
+                <div class="col-lg-6 py-3">
+                    <div class="shadow-sm border pt-5" >
+
+                            <!-- <apx-chart
                                 [series]="chartOptions?.series"
                                 [chart]="chartOptions?.chart"
                                 [labels]="chartOptions?.labels"
                                 [title]="chartOptions?.title"
                                 [theme]="chartOptions?.theme"
                                 [responsive]="chartOptions?.responsive"
-                            ></apx-chart>
-                        </div>
+                            ></apx-chart> -->
+                            <app-pyramid-chart>
+
+                            </app-pyramid-chart>
+
                     </div>
-                </div> -->
+                </div>
             </div>
             <div class="row  justify-content-md-center">
 
