--- a/src/app/modules/dashboard/president-ztbl/president-ztbl.component.html
+++ b/src/app/modules/dashboard/president-ztbl/president-ztbl.component.html
@@ -11,14 +11,14 @@
             <div class="row">
                 <div class="col-lg-6 py-3">
                     <div class="shadow-sm border">
-                        <div id="chart" class=" m-0 pt-2">
+                        <div id="chart" *ngIf="chartOptions1" class=" m-0 pt-2">
                             <apx-chart
-                                [series]="chartOptions.series"
-                                [chart]="chartOptions.chart"
-                                [labels]="chartOptions.labels"
-                                [title]="chartOptions.title"
-                                [theme]="chartOptions.theme"
-                                [responsive]="chartOptions.responsive"
+                                [series]="chartOptions1.series"
+                                [chart]="chartOptions1.chart"
+                                [labels]="chartOptions1.labels"
+                                [title]="chartOptions1.title"
+                                [theme]="chartOptions1.theme"
+                                [responsive]="chartOptions1.responsive"
                             ></apx-chart>
                         </div>
                     </div>
@@ -27,14 +27,44 @@
                 </div>
                 <div class="col-lg-6 py-3">
                     <div class="shadow-sm border">
-                        <div id="chart" class=" m-0 pt-2">
+                        <div id="chart" *ngIf="chartOptions2" class=" m-0 pt-2">
                             <apx-chart
-                                [series]="chartOptions.series"
-                                [chart]="chartOptions.chart"
-                                [labels]="chartOptions.labels"
-                                [title]="chartOptions.title"
-                                [theme]="chartOptions.theme"
-                                [responsive]="chartOptions.responsive"
+                                [series]="chartOptions2.series"
+                                [chart]="chartOptions2.chart"
+                                [labels]="chartOptions2.labels"
+                                [title]="chartOptions2.title"
+                                [theme]="chartOptions2.theme"
+                                [responsive]="chartOptions2.responsive"
+                            ></apx-chart>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-6 py-3">
+                    <div class="shadow-sm border">
+                        <div id="chart" *ngIf="chartOptions3" class=" m-0 pt-2">
+                            <apx-chart
+                                [series]="chartOptions3.series"
+                                [chart]="chartOptions3.chart"
+                                [labels]="chartOptions3.labels"
+                                [title]="chartOptions3.title"
+                                [theme]="chartOptions3.theme"
+                                [responsive]="chartOptions3.responsive"
+                            ></apx-chart>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-lg-6 py-3">
+                    <div class="shadow-sm border">
+                        <div id="chart" *ngIf="chartOptions4" class=" m-0 pt-2">
+                            <apx-chart
+                                [series]="chartOptions4.series"
+                                [chart]="chartOptions4.chart"
+                                [labels]="chartOptions4.labels"
+                                [title]="chartOptions4.title"
+                                [theme]="chartOptions4.theme"
+                                [responsive]="chartOptions4.responsive"
                             ></apx-chart>
                         </div>
                     </div>
@@ -46,104 +76,55 @@
                     <p class="heading mb-2 text-lg">Recovery</p>
                     <table class="table  table-striped">
 
-                        <thead>
+                        <!-- <thead>
                         <tr class="table-header-background">
                             <th scope="col">Calendar Year Target</th>
                             <th scope="col">Achievement</th>
                             <th scope="col">%age</th>
                         </tr>
-                        </thead>
+                        </thead> -->
                         <tbody>
-                        <tr>
-                            <th scope="row">Fiscsal year Target</th>
-                            <td>Achievement</td>
-                            <td>%age</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">Calendar Year Target Corresponding Period</th>
-                            <td>Achievement</td>
-                            <td>%age</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">Fiscsal year Target Corresponding Period</th>
-                            <td>Achievement</td>
-                            <td>%age</td>
+                        <tr *ngFor="let item of ResourcesCount">
+                            <td>{{item[0]}}</td>
+                            <td>{{item[1]}}</td>
                         </tr>
                         </tbody>
                     </table>
                 </div>
                 <div class="col-lg-6 table-responsive">
-                    <p class="heading mb-2 text-lg">Circle Wise within Allocated Branches</p>
+                    <p class="heading mb-2 text-lg">Country Top 5 Zone</p>
                     <table class="table  table-striped">
-
                         <thead>
                         <tr class="table-header-background">
-                            <th scope="col">Branch</th>
-                            <th scope="col">Disbursement</th>
-                            <th scope="col">Recovery</th>
-                            <th scope="col">NPL</th>
-                            <th scope="col">SAM</th>
-                            <th scope="col">Outstanding</th>
+                            <th scope="col">SrNO</th>
+                            <th scope="col">Name</th>
+                            <th scope="col">Amount</th>
                         </tr>
                         </thead>
                         <tbody>
-                        <tr>
-
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
+                        <tr *ngFor="let item of CountryTop5">
+                            <td>{{item.SrNO}}</td>
+                            <td>{{item.Name}}</td>
+                            <td>{{item.Amount}}</td>
                         </tr>
-                        <tr>
-
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="col-lg-6 table-responsive">
+                    <p class="heading mb-2 text-lg">Country Top 5 Worst Zones</p>
+                    <table class="table  table-striped">
+                        <thead>
+                        <tr class="table-header-background">
+                            <th scope="col">SrNO</th>
+                            <th scope="col">Name</th>
+                            <th scope="col">Amount</th>
                         </tr>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
+                        </thead>
+                        <tbody>
+                        <tr *ngFor="let item of CountryWorst5">
+                            <td>{{item.SrNO}}</td>
+                            <td>{{item.Name}}</td>
+                            <td>{{item.Amount}}</td>
                         </tr>
                         </tbody>
                     </table>
