--- a/src/app/modules/dashboard/recovery-sam-division/recovery-sam-division.component.html
+++ b/src/app/modules/dashboard/recovery-sam-division/recovery-sam-division.component.html
@@ -25,115 +25,85 @@
             <div class="row pb-4">
                 <div class="col-lg-6">
                     <div class="shadow-sm border">
-                        <div id="chart" class=" mt-0 py-3 shadow-sm border">
-                            <apx-chart
-                                [series]="chartOptions?.series"
-                                [chart]="chartOptions?.chart"
-                                [labels]="chartOptions?.labels"
-                                [title]="chartOptions?.title"
-                                [theme]="chartOptions?.theme"
-                                [responsive]="chartOptions?.responsive"
-                            ></apx-chart>
+                        <div id="chart" *ngIf="chartOptions1" class=" mt-0 py-3 shadow-sm border">
+                            <apx-chart [series]="chartOptions1?.series" [chart]="chartOptions1?.chart"
+                                [labels]="chartOptions1?.labels" [title]="chartOptions1?.title"
+                                [theme]="chartOptions1?.theme" [responsive]="chartOptions1?.responsive"></apx-chart>
                         </div>
                     </div>
 
                 </div>
                 <div class="col-lg-6">
                     <div class="shadow-sm border">
-                        <div id="chart" class=" mt-0 py-3 shadow-sm border">
-                            <apx-chart
-                                [series]="chartOptions2?.series"
-                                [chart]="chartOptions2?.chart"
-                                [labels]="chartOptions2?.labels"
-                                [title]="chartOptions2?.title"
-                                [theme]="chartOptions2?.theme"
-                                [responsive]="chartOptions2?.responsive"
-                            ></apx-chart>
+                        <div id="chart" *ngIf="chartOptions2" class=" mt-0 py-3 shadow-sm border">
+                            <apx-chart [series]="chartOptions2?.series" [chart]="chartOptions2?.chart"
+                                [labels]="chartOptions2?.labels" [title]="chartOptions2?.title"
+                                [theme]="chartOptions2?.theme" [responsive]="chartOptions2?.responsive"></apx-chart>
                         </div>
                     </div>
 
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-12 table-responsive">
+                <div class="col-lg-6 table-responsive">
                     <table class="table table-striped">
-                        <thead>
-                        <tr class="table-header-background">
-                            <th scope="row">No?. of Zones</th>
-                            <th scope="row">No?. of Branchs</th>
-                            <th scope="row">No?. of LLUs</th>
-                            <th scope="row">No?. of IC Units</th>
-                            <th scope="row">No?. of Accounts</th>
-                            <th scope="row">No?. of Lockers</th>
-                            <th scope="row">No?. of Bank owned Buildings</th>
-                            <th scope="row">No?. of Rented Officers</th>
-                            <th scope="row">No?. of Branches in Profits</th>
-                            <th scope="row">No?. of Lose</th>
-                            <th scope="row">No?. of Biometric Verified consumers (Loan + Accounts)</th>
-                            <th scope="row">No?. of MCO Circles</th>
-                            <th scope="row">No?. of MCOs available</th>
-                            <th scope="row">No?. of Burnt Files</th>
-                            <th scope="row">ATM Machines</th>
-                        </tr>
-                        </thead>
                         <tbody>
-                        <td>1</td>
-                        <td>2</td>
-                        <td>2</td>
-                        <td>2</td>
-                        <td>2</td>
-                        <td>2</td>
-                        <td>2</td>
-                        <td>2</td>
-                        <td>2</td>
-                        <td>2</td>
-                        <td>2</td>
-                        <td>2</td>
-                        <td>2</td>
-                        <td>2</td>
-                        <td>2</td>
+                            <tr *ngFor="let item of DisbursmentAchievement">
+                                <td>{{item[0]}}</td>
+                                <td>{{item[01]}}</td>
+                            </tr>
+                        </tbody>
 
+                    </table>
+                </div>
+                <div class="col-lg-6 table-responsive">
+                    <table class="table table-striped">
+                        <tbody>
+                            <tr *ngFor="let item of RecoveryAchievement">
+                                <td>{{item[0]}}</td>
+                                <td>{{item[01]}}</td>
+                            </tr>
                         </tbody>
 
                     </table>
                 </div>
             </div>
             <div class="row mt-3">
-                <div class="col-lg-12 table-responsive">
+                <div class="col-lg-16 table-responsive">
                     <table class="table table-striped">
                         <thead>
-                        <tr class="table-header-background">
-                            <th scope="col">Utilization</th>
-                            <th scope="col">Mutations</th>
-                            <th scope="col">Audit Para</th>
-                            <th></th>
-                        </tr>
+                            <tr class="table-header-background">
+                                <th scope="col">Sr. # </th>
+                                <th scope="col">Name Of Zone </th>
+                                <th scope="col">Amount</th>
+                                <th></th>
+                            </tr>
                         </thead>
                         <tbody>
-                        <tr>
-                            <th scope="row">Opening As on 01/01/2020</th>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">Added during the Year</th>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">Checked/Settled</th>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
-                        <tr>
-                            <th scope="row">Outstanding</th>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                        </tr>
+                            <tr *ngFor="let item of Top10NplZones">
+                                <td>{{item.SrNO}}</td>
+                                <td>{{item.Name}}</td>
+                                <td>{{item.Amount}}</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="col-lg-16 table-responsive">
+                    <table class="table table-striped">
+                        <thead>
+                            <tr class="table-header-background">
+                                <th scope="col">Sr. # </th>
+                                <th scope="col">Name Of Zone </th>
+                                <th scope="col">Amount</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr *ngFor="let item of Top10SamZones">
+                                <td>{{item.SrNO}}</td>
+                                <td>{{item.Name}}</td>
+                                <td>{{item.Amount}}</td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
@@ -141,4 +111,3 @@
         </div>
     </div>
 </div>
-
