--- a/src/app/modules/reports/search-loan-cases-by-cnic/search-loan-cases-by-cnic.component.html
+++ b/src/app/modules/reports/search-loan-cases-by-cnic/search-loan-cases-by-cnic.component.html
@@ -52,7 +52,7 @@
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                 <mat-label class="customMatLabel">Customer Name</mat-label>
                                 <input matInput placeholder="Enter Customer Name" formControlName="Name"
-                                       maxlength="25" autocomplete="off"/>
+                                       maxlength="25" autocomplete="off" appAlphabetOnly/>
                             </mat-form-field>
                         </div>
                     </div>
@@ -61,7 +61,7 @@
                             <mat-form-field class="mat-form-field-fluid w-full" appearance="outline">
                                 <mat-label class="customMatLabel">Father Name</mat-label>
                                 <input matInput placeholder="Enter Father Name" formControlName="FatherName"
-                                       maxlength="25" autocomplete="off"/>
+                                       maxlength="25" autocomplete="off" appAlphabetOnly/>
                             </mat-form-field>
                         </div>
                     </div>
