--- a/src/app/modules/customer/submit-documents/submit-documents.component.html
+++ b/src/app/modules/customer/submit-documents/submit-documents.component.html
@@ -9,16 +9,16 @@
     </div>
     <div class="row">
         <div class="col-lg-3">
-            <mat-form-field appearance="outline">
+            <mat-form-field class="w-full" appearance="outline">
                 <mat-label>Number of Files</mat-label>
                 <input matInput type="text" appNumberOnly
-                       (change)="changeNumberOfFiles($event.target.value)"
+                       (keyup)="changeNumberOfFiles($event.target.value)"
                        [(ngModel)]="number_of_files"
                        class="mat-input-element"/>
             </mat-form-field>
         </div>
         <div class="col-lg-3">
-            <mat-form-field appearance="outline">
+            <mat-form-field class="w-full" appearance="outline">
                 <mat-label>Description</mat-label>
                 <input matInput type="text" (change)="changeTypeData($event.target.value,'description')"
                        [(ngModel)]="general_description"
@@ -26,7 +26,7 @@
             </mat-form-field>
         </div>
         <div class="col-lg-3">
-            <mat-form-field appearance="outline">
+            <mat-form-field class="w-full" appearance="outline">
                 <mat-label>Reference No.</mat-label>
                 <input matInput type="text" (change)="changeTypeData($event.target.value,'reference')"
                        [(ngModel)]="reference"
@@ -34,7 +34,7 @@
             </mat-form-field>
         </div>
         <div class="col-lg-3">
-            <mat-form-field appearance="outline">
+            <mat-form-field class="w-full" appearance="outline">
                 <mat-label class="customMatLabel">Select Document Type
                 </mat-label>
                 <mat-select (selectionChange)="changeDocumentType($event)">
@@ -61,7 +61,7 @@
             <div class="col-lg-9">
                 <mat-form-field class="w-full" appearance="outline">
                     <mat-label>Description</mat-label>
-                    <input matInput type="text" class=" h-32" (change)="changeTypeData($event.target.value,'file_description',i)"
+                    <input matInput type="text" style="font-size: 12px; padding: .25em 0 .75em 0; margin-bottom: 50px;" (change)="changeTypeData($event.target.value,'file_description',i)"
                            [(ngModel)]="description[i]"/>
                 </mat-form-field>
             </div>
