--- a/src/app/modules/customer/submit-documents/submit-documents.component.html
+++ b/src/app/modules/customer/submit-documents/submit-documents.component.html
@@ -49,25 +49,32 @@
 
 
     <div *ngFor="let j of [].constructor(number_of_files);let i=index">
+
         <div class="row p-2 border rounded my-2">
-            <div class="col-lg-3 align-self-center">
-                <div class="shadow-sm mt-2" style="width: 240px; position: relative;">
+            <div class="col-lg-12">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <mat-form-field class="w-full" appearance="outline">
+                            <mat-label>Description</mat-label>
+                            <input matInput type="text"  (change)="changeTypeData($event.target.value,'file_description',i)"
+                                   [(ngModel)]="description[i]"/>
+                        </mat-form-field>
+                    </div>
+                </div>
+           <div class="row">
+            <div class="col-lg-6 align-self-center flex">
+                <div *ngIf="doc_urls[i]" class=" mt-2 mr-4" style="width: 140px; height: 140px; position: relative;">
                     <img [src]="doc_urls[i]" (click)="previewImg(doc_urls[i])">
                 </div>
 
-                <input type="file" accept="image/png, image/jpg, image/jpeg" appearance="outline"
+                <input width="150" style="    align-self: center;" type="file" accept="image/png, image/jpg, image/jpeg" appearance="outline"
                        (change)="onFileChange($event, i)"/>
 
             </div>
-            <div class="col-lg-9">
-                <mat-form-field class="w-full" appearance="outline">
-                    <mat-label>Description</mat-label>
-                    <input matInput type="text" style="font-size: 12px; padding: .25em 0 .75em 0; margin-bottom: 50px;" (change)="changeTypeData($event.target.value,'file_description',i)"
-                           [(ngModel)]="description[i]"/>
-                </mat-form-field>
             </div>
-        </div>
 
+        </div>
+</div>
 
     </div>
 
