--- a/src/app/modules/customer/submit-documents/submit-documents.component.html
+++ b/src/app/modules/customer/submit-documents/submit-documents.component.html
@@ -55,14 +55,15 @@
                     <img [src]="doc_urls[i]" (click)="previewImg(doc_urls[i])">
                 </div>
 
-                <input type="file" accept="image/png, image/jpg, image/jpeg" appearance="outline"
+                <input type="file" accept="image/png, image/jpg, image/jpeg" appearance="outline" id="file_${{i}}"
                        (change)="onFileChange($event, i)"/>
 
             </div>
             <div class="col-lg-9">
                 <mat-form-field class="w-full" appearance="outline">
                     <mat-label>Description</mat-label>
-                    <input matInput type="text" style="font-size: 12px; padding: .25em 0 .75em 0; margin-bottom: 50px;" (change)="changeTypeData($event.target.value,'file_description',i)"
+                    <input matInput type="text" style="font-size: 12px; padding: .25em 0 .75em 0; margin-bottom: 50px;"
+                           (change)="changeTypeData($event.target.value,'file_description',i)"
                            [(ngModel)]="description[i]"/>
                 </mat-form-field>
             </div>
